@@ -6,6 +6,8 @@ cdebconf-entropy (0.7) UNRELEASED; urgency=low
   * Properly link the newt entropy plugin against libtextwrap.
   * Correctly link newt entropy plugin against libtextwrap.
   * Do not link against the no longer used libdl.
+  * Allow success message to be read from a configurable template through the
+    "SUCCESS" variable.
 
  -- Jérémy Bobbio <lunar@debian.org>  Sun, 23 Mar 2008 20:28:57 +0100
 
